--- a/pages_fond_couleur.css
+++ b/pages_fond_couleur.css
@@ -1,61 +1,26 @@
 @charset "UTF-8";
 /* CSS Document */
 
-html{
-	min-width: 100%;
-	min-height:100vh;
-		
-}
 body{
-	position: relative;
 	background-color: black;
-	width: 1100px;
-	height=650px;
-	margin-left: auto;
-	margin-right: auto;
-	
-	
- 
 }
 
-#fond{
-	position: relative;
-	background-image: url(images/fond/fondcatarchitecture.gif);
-	margin-left: auto;
-	margin-right: auto;
-	min-width:1100px;
-	min-height: 650px;
-	
-	width: 100%;
-height: 650px;
-}
-
-#fond_blanc{
-	position: relative;
-	
-	margin-left: auto;
-	margin-right: auto;
-	min-width:1100px;
-	min-height: 650px;
-	
-	width: 100%;
-height: 650px;
+.container{
+	margin-top: 5%;
 }
 
 
-#zLeft{
-	position: absolute;
-	left: 0px;
-	top: 0px;
-	height: 100%;
-	width: 130px;
-	
-}
+
+
+
+
 
 #zLeft_blanc{
 	position: absolute;
 	left: 0px;
 	top: 0px;
+	
+	background-color: white;
 	height: 100%;
 	width: 130px;
 	
@@ -65,6 +30,7 @@ height: 650px;
 	position: absolute;
 	top:105px;
 	left:25px;
+	cursor:pointer;
 
 	
 }
@@ -124,16 +90,13 @@ height: 650px;
 	height: 100%;
 	width: 100px;
 	z-index: 2;
-	
-	
-}
-
+	cursor: default;}
 
 #triangle{
 	border-color: #000000 transparent transparent #000000;
     border-style: solid;
     border-width: 0px 120px 650px;
-    cursor: pointer;
+    cursor: default;
     height: 0;
     position: absolute;
     margin-left: 0px;
@@ -149,7 +112,8 @@ height: 650px;
 	height: 100%;
 	width: 15px;
 	background-color: #e3e8ec;
-	z-index: 0
+	z-index: 0;
+	cursor: default;
 		
 }
 
@@ -160,6 +124,7 @@ height: 650px;
 	height:2px;
 	width: 920px;
 	background-color: black;
+	cursor: default;
 }
 
 #traitGrisBas{
@@ -170,6 +135,7 @@ height: 650px;
 	width: 940px;
 	background-color: #e3e8ec;
 	z-index: 1;
+	cursor: default;
 }
 
 #traitGrisBasGauche{
@@ -179,102 +145,68 @@ height: 650px;
 	height:2px;
 	width:25px;
 	background-color: #e3e8ec;
+	cursor: default;
 
 }
 
-#zRight{
-	position: absolute;
-	left: 130px;
-	height: 100%;
-	width: 970px;
-	z-index: 1;
-}
+
 
 #texte_p_a{
-	position: absolute;
-	top: 0px;
-	left:0px;
-	height:600px;
-	width:520px;
-	text-align: right;
+
+	height:560px;
+	width:510px;
+	text-align: justify;
+	font-family: Helvetica;
+	font-size: 13px;
+	cursor: default;
+
+	
+
 }
 
-#texte_bas{
-	position: absolute;
-	top:590px;
-	left:0px;
-	height: 90px;
-	width:970px;
-	text-align: center;
-	z-index: 2;
-}
+
 #titre_texte_p_a{
 	position: absolute;
 	top: 50px;
-	color: red;
-	width:inherit;
+	width: 510px;
+	color: #adbcc4;
+	font-size: 25px;
+	font-family: Helvetica Neue LT Std;
+	cursor: default;
+	
+	
 }
 
 #corps_texte_p_a{
-	position: absolute;
-	top:100px;
-	width: inherit;
-}
-
-#cercleHaut{
-	position: absolute;
-	top:105px;
-	right:0px;
-	background:#e3e9ec;
-  	border-radius:50%;
-  	width:70px;
-  	height:140px;
-  	border-radius: 70px 0px 0px 70px;
+	position: relative;
+	top:125px;
+	width: 510px;
+	cursor: default;
 	
 }
 
-#cercleCentre{
-	position: absolute;
-	top:260px;
-	right:0px;
-	background:#e3e9ec;
-  	border-radius:50%;
-  	width:70px;
-  	height:140px;
-  	border-radius: 70px 0px 0px 70px;
-	
 
-}
-
-#cercleBas{
-	position: absolute;
-	top:415px;
-	right:0px;
-	background:#e3e9ec;
-  	border-radius:50%;
-  	width:70px;
-  	height:140px;
-  	border-radius: 70px 0px 0px 70px;
-	
-}
 
 #btArchitecture{
 	position: absolute;
 	top: 170px;
-	right:150px;
+	right:10px;
+	cursor: pointer;
 	
 }
 
 #btamenagements{
 	position:absolute;
 	top:325px;
-	right:150px;
+	right:10px;
+	cursor: pointer;
 }
 
 #btarchitriad{
 	position: absolute;
 	top:480px;
-	right: 150px;
+	right: 10px;
+	cursor: pointer;
 }
 
 #AT{
@@ -282,5 +214,66 @@ height: 650px;
 	top:133px;
 	left:52px;
 	z-index: 0;
+	cursor: default;
 		
+}
+#renseignement{
+	position: relative;
+	top:7px;
+	cursor: default;
+}
+
+#boxTextePresArchi{
+	position: relative;
+	left:10px;
+	width: 510px;
+	height:560px;
+	cursor: default;
+}
+
+.left{
+width: 120px;
+  height: 650px;
+ 
+  -webkit-shape-outside: polygon(0 0, 0 100%, 100% 0);
+  shape-outside: polygon(0 0, 0 100%, 100% 0%);
+  float: left;
+  -webkit-clip-path: polygon(0 0, 0% 100%, 100% 0%);
+	clip-path: polygon(0 0, 0 100%, 100% 0%);
+}
+
+
+#texte_bas{
+	position: absolute;
+	top:590px;
+	left:-37px;
+	height: 90px;
+	width:970px;
+	
+	z-index: 2;
+	cursor: default;
+}
+
+#imBasArchitriad{
+	position: absolute;
+	top:0px;
+	left:0px;
+}
+
+#imBasCabinetArchitecte{
+	position: absolute;
+	top:0px;
+	left: 250px;
+}
+
+#imBasArgentan{
+	position: absolute;
+	top: 0px;
+	left:510px;
+}
+
+#imBasMortagne{
+	position: absolute;
+	top:0px;
+	left:720px;
 }
