--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ height: 650px;
 	left: 0px;
 	top: 0px;
 	
-	background-color: black;
+	
 	height: 100%;
 	width: 130px;
 	
@@ -90,7 +90,7 @@ height: 650px;
 #zRight{
 	position: absolute;
 	left: 130px;
-	background-color: white;
+	
 	height: 100%;
 	width: 970px;
 	z-index: 1;
@@ -404,3 +404,197 @@ width: 120px;
 	top:0px;
 	left:720px;
 }
+
+
+
+/* habitacion*/
+
+@charset "UTF-8";
+/* CSS Document */
+
+#cercleHaut{
+	position: absolute;
+	top:105px;
+	right:0px;
+	background:#ffffff;
+  	border-radius:50%;
+  	width:70px;
+  	height:140px;
+  	border-radius: 70px 0px 0px 70px;
+	
+}
+
+#cercleCentre{
+	position: absolute;
+	top:260px;
+	right:0px;
+	background:#51646e;
+  	border-radius:50%;
+  	width:70px;
+  	height:140px;
+  	border-radius: 70px 0px 0px 70px;
+	
+
+}
+
+#cercleBas{
+	position: absolute;
+	top:415px;
+	right:0px;
+	background:#51646e;
+  	border-radius:50%;
+  	width:70px;
+  	height:140px;
+  	border-radius: 70px 0px 0px 70px;
+	
+}
+
+#fond{
+	position: relative;
+	margin-left: auto;
+	margin-right: auto;
+	min-width:1100px;
+	min-height: 650px;
+	
+	width: 100%;
+height: 650px;
+}
+
+#zLeft{
+	position: absolute;
+	left: 0px;
+	top: 0px;
+	height: 100%;
+	width: 130px;
+	
+}
+#zRight{
+	position: absolute;
+	top:0px;
+	left: 130px;
+	height: 100%;
+	width: 970px;
+	z-index: 1;
+}
+
+#cercleContact{
+	position: absolute;
+	top:105px;
+	left:39px;
+	width: 15px;
+    height: 15px;
+    border-radius: 20px;
+    background: white;
+}
+
+#cercleMortagne{
+	position: absolute;
+	top:105px;
+	left:60px;
+	width: 15px;
+    height: 15px;
+    border-radius: 20px;
+    background: white;
+}
+
+#cercleArgentan{
+	position: absolute;
+	top:105px;
+	left:81px;
+	width: 15px;
+    height: 15px;
+    border-radius: 20px;
+    background: white;
+}
+
+#traitVertGrisFonce{
+	position:absolute;
+	Top:0px;
+	left: 530px;
+	height: 100%;
+	width: 15px;
+	background-color: #51646e;
+	z-index: 0
+		
+}
+
+#logoLeftCarre{
+	position: absolute;
+	top:520px;
+	
+	left:27px;
+	cursor: pointer;
+	
+}
+#titreHabitation{
+	position: relative;
+	top:0px;
+	width: 510px;
+	color : #e05015;
+	left:10px;
+
+}
+
+#titreHabitationGris{
+	position: relative;
+	top:0px;
+	width: 510px;
+	color : #868789;
+	left:10px;
+	cursor: pointer;
+
+}
+
+#titreEtablissements{
+	position: relative;
+	width: 510px;
+	color : #868789;
+	left:10px;
+	cursor: pointer;
+
+}
+
+#titreIndustries{
+	position: relative;
+	width: 510px;
+	color : #868789;
+left:10px;
+cursor: pointer;}
+
+#titrePatrimoine{
+	position: relative;
+	width: 510px;
+	color : #868789;
+		left:10px;
+	cursor: pointer;
+}
+
+#titreDivers{
+	position: relative;
+	width: 510px;
+	color : #868789;
+	left:10px;
+	cursor:pointer;
+}
+
+#listeDroite{
+	position:absolute;
+	left:555px;
+	top:80px;
+	width:175px;
+	height:450px;
+color:white;
+	font-size:0.9em;
+	overflow: hidden;
+	overflow-y: scroll;
+
+}
+
+a{
+	text-decoration: none;
+	color:#b1b2b4;
+	font-size:0.9em;
+}
+
+
+/* end habitacion*/
