--- a/css/style_2.css
+++ b/css/style_2.css
@@ -1,24 +1,3 @@
-@charset "UTF-8";
-/* CSS Document */
-
-/*html{
-	min-width: 100%;
-	min-height:100vh;
-		
-}
-body{
-	position: relative;
-	background-color: black;
-	width: 1100px;
-	height=650px;
-	margin-left: auto;
-	margin-right: auto;
-	
-	
- 
-}
-*/
-
 body{
 	background-color: black;
 }
@@ -57,11 +36,10 @@ body{
 
 #btcontact{
 	position: absolute;
-	top: 95px;
-	left: 29px;
+	top: 104px;
+	left: 16px;
 	cursor: pointer;
-	font-size: 12px;
-	
+	font-size: 17px;
 	z-index: 3;
 	/* Rotation du div */
 	transform: rotate(-79deg);
@@ -77,10 +55,10 @@ body{
 
 #btAgenceMortagne{
 	position: absolute;
-	top: 66px;
-	left: 28px;
+	top: 65px;
+	left: 7px;
 	cursor: pointer;
-	font-size: 12px;
+	font-size: 17px;
 	color: #000000;
 	z-index: 1;
 	/* Rotation du div */
@@ -93,10 +71,10 @@ body{
 
 #btAgenceArgentan{
 	position: absolute;
-	top: 66px;
-	left: 52px;
+	top: 65px;
+	left: 35px;
 	cursor: pointer;
-	font-size: 12px;
+	font-size: 17px;
 	color: #000000;
 	z-index: 3;
 	/* Rotation du div */
@@ -143,9 +121,9 @@ body{
 
 #traitNoirBas{
 	position: absolute;
-	top:560px;
-	left:0px;
-	height:2px;
+	top: 560px;
+	left: 25px;
+	height: 2px;
 	width: 920px;
 	background-color: black;
 	cursor: default;
@@ -220,6 +198,12 @@ body{
 	height: 17px;
 	
 }
+
+
+img.overColor :hover{
+	background: rgb(254,127,45);
+}
+
 
 #btamenagements{
 	position: absolute;
@@ -310,35 +294,56 @@ width: 120px;
 
 @font-face {
 	font-family: 'Designio';
-	src: url('fonts/DesignioBold.eot');
-	src: url('fonts/DesignioBold.eot?#iefix') format('embedded-opentype'),
-		url('fonts/DesignioBold.woff') format('woff'),
-		url('fonts/DesignioBold.ttf') format('truetype');
+	src: url('../fonts/DesignioBold.eot');
+	src: url('../fonts/DesignioBold.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/DesignioBold.woff') format('woff'),
+		url('../fonts/DesignioBold.ttf') format('truetype');
 	font-weight: bold;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: 'Helvetica Neue LT Std';
-	src: url('fonts/HelveticaNeueLTStd-BdCn.eot');
-	src: url('fonts/HelveticaNeueLTStd-BdCn.eot?#iefix') format('embedded-opentype'),
-		url('fonts/HelveticaNeueLTStd-BdCn.woff') format('woff'),
-		url('fonts/HelveticaNeueLTStd-BdCn.ttf') format('truetype');
+	src: url('../fonts/HelveticaNeueLTStd-BdCn.eot');
+	src: url('../fonts/HelveticaNeueLTStd-BdCn.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/HelveticaNeueLTStd-BdCn.woff') format('woff'),
+		url('../fonts/HelveticaNeueLTStd-BdCn.ttf') format('truetype');
 	font-weight: bold;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: 'Helvetica';
-	src: url('fonts/Helvetica.eot');
-	src: url('fonts/Helvetica.eot?#iefix') format('embedded-opentype'),
-		url('fonts/Helvetica.woff') format('woff'),
-		url('fonts/Helvetica.ttf') format('truetype');
+	src: url('../fonts/Helvetica.eot');
+	src: url('../fonts/Helvetica.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/Helvetica.woff') format('woff'),
+		url('../fonts/Helvetica.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
 }
 
 
+@font-face {
+	font-family:"marble";
+	src:url(../fonts/MrblMchn.ttf);
+}
+
+@font-face {
+	font-family:"appleDot";
+	src:url(../fonts/apple_dot.ttf);
+}
+
+
+@font-face {
+	font-family:"marengu";
+	src:url(../fonts/Marengi.ttf);
+}
+
+
+@font-face {
+	font-family:"dot";
+	src:url(../fonts/DotMatrixRegular.ttf);
+}
 
 /*end fonts */
 
@@ -387,6 +392,102 @@ width: 120px;
 	
 }
 
+
+
+
+
+
+
+.cercleHautV2{
+	position: absolute;
+	top:105px;
+	right:0px;
+	background:#e3e9ec;
+  	border-radius:50%;
+  	width:70px;
+  	height:140px;
+  	border-radius: 70px 0px 0px 70px;
+	cursor: pointer;
+	
+}
+
+
+img.btArchitectureV2 :hover{
+	background-image: url(../images/imArchitectureOrange.gif);
+/*
+	width: 279px;
+	height: 18px;
+*/
+}
+
+
+.cercleCentreV2{
+	position: absolute;
+	top:260px;
+	right:0px;
+	background:#e3e9ec;
+  	border-radius:50%;
+  	width:70px;
+  	height:140px;
+  	border-radius: 70px 0px 0px 70px;
+	cursor: pointer;
+	
+
+}
+
+
+.cercleCentreV2:hover{
+	image	
+}
+
+.cercleBasV2{
+	position: absolute;
+	top:415px;
+	right:0px;
+	background:#e3e9ec;
+  	border-radius:50%;
+  	width:70px;
+  	height:140px;
+  	border-radius: 70px 0px 0px 70px;
+	cursor: pointer;
+	
+}
+
+
+
+
+
+
+
+.btArchitectureV2{
+	position: absolute;
+	top: 170px;
+	right:10px;
+	cursor: pointer;
+	color: white;
+/*	font-family: "marble";*/
+/*	font-family: "appleDot";*/
+/*	font-family: "marengu";*/
+	font-family: "dot";
+	font-size: 22px;
+	
+}
+
+
+.btamenagementsV2{
+	position:absolute;
+	top:325px;
+	right:10px;
+	cursor: pointer;
+}
+.btarchitriadV2{
+	position: absolute;
+	top:480px;
+	right: 10px;
+	cursor: pointer;
+}
+
+
 #fond{
 	position: relative;
 	margin-left: auto;
@@ -417,32 +518,32 @@ height: 650px;
 
 #cercleContact{
 	position: absolute;
-	top: 126px;
-	left: 39px;
+	top: 152px;
+	left: 33px;
 	width: 15px;
 	height: 15px;
 	border-radius: 20px;
-	background: white;
+	background: black;
 }
 
 #cercleMortagne{
 	position: absolute;
-	top: 126px;
+	top: 152px;
 	left: 60px;
 	width: 15px;
 	height: 15px;
 	border-radius: 20px;
-	background: white;
+	background: black;
 }
 
 #cercleArgentan{
 	position: absolute;
-	top: 126px;
-	left: 81px;
+	top: 152px;
+	left: 84px;
 	width: 15px;
 	height: 15px;
 	border-radius: 20px;
-	background: white;
+	background: black;
 }
 
 #traitVertGrisFonce{
@@ -477,7 +578,7 @@ height: 650px;
 	position: relative;
 	top:0px;
 	width: 510px;
-	color : #868789;
+	
 	left:10px;
 	cursor: pointer;
 
@@ -515,11 +616,40 @@ cursor: pointer;}
 	cursor:pointer;
 }
 
+/*
 .listeDroite{
 	position: absolute;
-	left: 561px;
-	top: 188px;
-	width: 348px;
+	left: 549px;
+	top: 196px;
+	width: 418px;
+	height: 363px;
+	color: white;
+	font-size: 0.9em;
+	overflow: hidden;
+	overflow-y: scroll;
+
+}
+*/
+
+
+.listeDroite_hab{
+	position: absolute;
+	left: 550px;
+	top: 221px;
+	width: 418px;
+	height: 363px;
+	color: white;
+	font-size: 0.9em;
+	overflow-y: scroll;
+	overflow: hidden;
+
+}
+
+.listeDroite_etabl{
+	position: absolute;
+	left: 549px;
+	top: 196px;
+	width: 418px;
 	height: 363px;
 	color: white;
 	font-size: 0.9em;
@@ -538,10 +668,6 @@ cursor: pointer;}
 
 
 
-.actived{
-	color:#FF7700 ;
-	text-decoration: none;
-}
 
 .listeDroite{
 	overflow: hidden;
@@ -563,14 +689,22 @@ cursor: pointer;}
 
 
 
+/*links up_left*/
+
+
+
+
+
+
+/* end links up_left*/
+
 a.linky:visited {
-	color: white;
-	text-decoration: none;
+	color: red;
 }
 
 a.linky:hover{
 	color: #e05015;
-	text-decoration: none;
+	
 }
 
 
@@ -591,24 +725,92 @@ a.list_two:hover{
 
 
 
-.actived:visited, a.actived:hover{
-	color:#fff ;
+.cercleHautV2{
+	position: absolute;
+	top:105px;
+	right:0px;
+	background:#51646e;
+  	border-radius:50%;
+  	width:70px;
+  	height:140px;
+  	border-radius: 70px 0px 0px 70px;
+	
+}
+
+.cercleCentreV2{
+	position: absolute;
+	top:260px;
+	right:0px;
+	background:#51646e;
+  	border-radius:50%;
+  	width:70px;
+  	height:140px;
+  	border-radius: 70px 0px 0px 70px;
+	
+
+}
+
+.cercleBasV2{
+	position: absolute;
+	top:415px;
+	right:0px;
+	background:#51646e;
+  	border-radius:50%;
+  	width:70px;
+  	height:140px;
+  	border-radius: 70px 0px 0px 70px;
+	
+}
+
+
+a.diags:hover{
+	color: #000;
 	text-decoration: none;
 }
 
- a.actived:hover{
-	 color:#fff ;
-	 text-decoration: none;}
-	 
+a.diags:visited, a.diags{
+	color: #fff;
+	
+}
+
+
+.hovery:hover{
+	color: #e05015;
+	background-color: #e05015;
+}
 
 
 
-.actived:visited, a.actived:hover{
-	color:#fff ;
+
+a.hoverText :hover{
+	position: absolute;
+	top: 170px;
+	right:10px;
+	cursor: pointer;
+	color: blueviolet;
+/*	font-family: "marble";*/
+/*	font-family: "appleDot";*/
+/*	font-family: "marengu";*/
+	font-family: "dot";
+	font-size: 22px;
+	
+}
+
+
+
+#aktv{
+	color:#FF7700 ;
+}
+
+
+.actived{
+	color:#FF7700 ;
 	text-decoration: none;
 }
 
- a.actived:hover{
-	 color:#fff ;
-	 text-decoration: none;}
-	 
+
+
+.actived:hover{
+	color:#FF7700 ;
+	text-decoration: none;
+}
