--- a/css/cssProjet.css
+++ b/css/cssProjet.css
@@ -1,6 +1,3 @@
-@charset "UTF-8";
-/* CSS Document */
-
 #triangleProject{
 	border-color: #000000 transparent transparent #000000;
     border-style: solid;
@@ -107,41 +104,42 @@ width: 65px;
 	
 }
 
+/*
 @-webkit-keyframes diapo1{
-	0%{background-image: url(images/p1/p112/p112Im1.gif);}
+	0%{background-image: url(../images/p1/p112/p112Im1.gif);}
 	
-	45%{background-image: url(images/p1/p112/p112Im1.gif);}
-	50%{background-image: url(images/p1/p112/p112Im2.gif);}
+	45%{background-image: url(../images/p1/p112/p112Im1.gif);}
+	50%{background-image: url(../images/p1/p112/p112Im2.gif);}
 	
-	95%{background-image: url(images/p1/p112/p112Im2.gif);}
+	95%{background-image: url(../images/p1/p112/p112Im2.gif);}
 }
 @-moz-keyframes diapo1{
-	0%{background-image: url(images/p1/p112/p112Im1.gif);}
+	0%{background-image: url(../images/p1/p112/p112Im1.gif);}
 	
-	45%{background-image: url(images/p1/p112/p112Im1.gif);}
-	50%{background-image: url(images/p1/p112/p112Im2.gif);}
+	45%{background-image: url(../images/p1/p112/p112Im1.gif);}
+	50%{background-image: url(../images/p1/p112/p112Im2.gif);}
 	
-	95%{background-image: url(images/p1/p112/p112Im2.gif);}
+	95%{background-image: url(../images/p1/p112/p112Im2.gif);}
 }
 @keyframes diapo1{
-	0%{background-image: url(images/p1/p112/p112Im1.gif);}
-	13%{background-image: url(images/p1/p112/p112Im1.gif);}
+	0%{background-image: url(../images/p1/p112/p112Im1.gif);}
+	13%{background-image: url(../images/p1/p112/p112Im1.gif);}
 	
-	17%{background-image: url(images/p1/p112/p112Im2.gif);}
-	30%{background-image: url(images/p1/p112/p112Im2.gif);}
+	17%{background-image: url(../images/p1/p112/p112Im2.gif);}
+	30%{background-image: url(../images/p1/p112/p112Im2.gif);}
 	
-	34%{background-image: url(images/p1/p112/p112Im3.gif);}
-	47%{background-image: url(images/p1/p112/p112Im3.gif);}
+	34%{background-image: url(../images/p1/p112/p112Im3.gif);}
+	47%{background-image: url(../images/p1/p112/p112Im3.gif);}
 
-	51%{background-image: url(images/p1/p112/p112Im4.gif);}
-	64%{background-image: url(images/p1/p112/p112Im4.gif);}
+	51%{background-image: url(../images/p1/p112/p112Im4.gif);}
+	64%{background-image: url(../images/p1/p112/p112Im4.gif);}
 	
-	68%{background-image: url(images/p1/p112/p112Im5.gif);}
-	81%{background-image: url(images/p1/p112/p112Im5.gif);}
+	68%{background-image: url(../images/p1/p112/p112Im5.gif);}
+	81%{background-image: url(../images/p1/p112/p112Im5.gif);}
 	
-	85%{background-image: url(images/p1/p112/p112Im6.gif);}
-	96%{background-image: url(images/p1/p112/p112Im6.gif);}
-}
+	85%{background-image: url(../images/p1/p112/p112Im6.gif);}
+	96%{background-image: url(../images/p1/p112/p112Im6.gif);}
+}*/
 
 #btRunStop{
 	position:absolute;
