--- a/css/level2.css
+++ b/css/level2.css
@@ -1361,7 +1361,7 @@ p {
     }
   
     .container-fluid {
-        background-image: url('../img/bg/at_1.JPG')!important; 
+        background-image: url('/img/bg/at_1.JPG')!important; 
         background-size: cover;
         background-repeat: no-repeat;
         width: auto;
